--- a/week03/non_ML_approaches_remote_sensing.ipynb
+++ b/week03/non_ML_approaches_remote_sensing.ipynb
@@ -50,52 +50,20 @@
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
-    "import rasterio as rio\n",
     "import geopandas as gpd\n",
-    "import eopf\n",
-    "import rioxarray\n",
-    "import rasterio.features\n",
-    "import stackstac\n",
     "import pystac_client\n",
-    "from pystac_client import Client\n",
     "import planetary_computer\n",
-    "import xrspatial.multispectral as ms\n",
-    "from dask_gateway import GatewayCluster\n",
     "import odc.stac\n",
-    "import plotly.express as px\n",
     "import pandas as pd\n",
-    "import altair as alt\n",
-    "from bokeh.models import HoverTool, NumeralTickFormatter, ColorBar\n",
-    "from holoviews import opts\n",
-    "import hvplot.xarray\n",
-    "import panel as pn\n",
     "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "from rasterio.io import MemoryFile\n",
-    "import rio_cogeo\n",
     "from dask.distributed import Client, LocalCluster\n",
     "from IPython.display import Image\n",
     "from shapely.geometry import box\n",
-    "from odc.stac import configure_rio, stac_load\n",
-    "import time\n",
-    "from pyproj import Transformer\n",
-    "import dask.array as da"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80b0e248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from odc.stac import stac_load\n",
     "from skimage import exposure\n",
     "from zarr_wf_utils import (\n",
     "    validate_scl,\n",
-    "    mask_sub_utm,\n",
-    "    normalisation_str_gm,\n",
-    "    lat_lon_to_utm_box,\n",
-    "    zarr_mask_utm\n",
+    "    normalisation_str_gm\n",
     ")"
    ]
   },
@@ -183,8 +151,8 @@
    "source": [
     "# Bounding box for province of Nuoro, Sardinia, Italy.\n",
     "bbox = [9.239709, 40.290681, 9.396964, 40.351409] # min lon, min lat, max lon, max lat\n",
-    "pre_datetime = \"2025-06-01/2025-06-09\"\n",
-    "post_datetime = \"2025-07-11/2025-07-19\""
+    "pre_datetime = \"2025-06-01T00:00:00Z/2025-06-09T23:59:59Z\"\n",
+    "post_datetime = \"2025-07-11T00:00:00Z/2025-07-19T23:59:59Z\""
    ]
   },
   {
@@ -339,7 +307,7 @@
     "    bands = [\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\", \"SCL\"],\n",
     "    crs = \"EPSG:3857\",\n",
     "    resolution = 10,\n",
-    "    chunks = {\"time\": -1, \"x\": 128, \"y\": 128},\n",
+    "    chunks = {\"time\": -1, \"x\": 64, \"y\": 64},\n",
     "    bbox = bbox,\n",
     ")"
    ]
@@ -370,6 +338,16 @@
     "    chunks = {\"time\": -1, \"x\": 128, \"y\": 128},\n",
     "    bbox = bbox,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a010382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_data"
    ]
   },
   {
@@ -425,10 +403,11 @@
    "source": [
     "# Create cloud mask from scl.\n",
     "# Mask is True where pixels are CLEAR.\n",
-    "pre_scl_mask = (pre_data[\"SCL\"].astype(np.uint8) & 0b11000) == 0\n",
+    "scl = pre_data[\"SCL\"].squeeze()\n",
+    "scl_mask = scl.isin([2, 4, 5, 6, 7, 11])\n",
     "\n",
     "# Apply mask to spectral bands (SCL become NaN).\n",
-    "pre_data_masked = pre_data[[\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\"]].where(pre_scl_mask)\n",
+    "pre_data_masked = pre_data[[\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\"]].where(scl_mask)\n",
     "\n",
     "# Median now ignores NaN (SCL) pixels.\n",
     "pre_median = pre_data_masked.median(dim = \"time\")\n",
@@ -452,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(5, 1, figsize=(6, 8))\n",
+    "fig, axes = plt.subplots(5, 1, figsize=(8, 12))\n",
     "\n",
     "bands = [\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\"]\n",
     "band_names = [\"SWIR\", \"NIR\", \"Red\", \"Green\", \"Blue\"]\n",
@@ -463,11 +442,7 @@
     "for ax, band, name in zip(axes.flat, bands, band_names):\n",
     "    data = normalisation_str_gm(pre_result[band].values, *contrast_stretch_percentile, gamma)\n",
     "\n",
-    "    # Normalize each band.\n",
-    "    p2, p98 = np.nanpercentile(data, (2, 98))\n",
-    "    normalized = np.clip((data - p2) / (p98 - p2), 0, 1)\n",
-    "\n",
-    "    ax.imshow(normalized, cmap=\"gray\")\n",
+    "    ax.imshow(data, cmap=\"gray\")\n",
     "    ax.set_title(name)\n",
     "    ax.axis(\"off\")\n",
     "\n",
@@ -497,15 +472,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_true_color = np.stack(\n",
-    "    [pre_red_norm, pre_green_norm, pre_blue_norm], axis=-1\n",
+    "pre_true_color = np.dstack(\n",
+    "    [pre_red_norm, pre_green_norm, pre_blue_norm]\n",
     ")\n",
     "\n",
     "# Plot\n",
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(pre_true_color)\n",
     "ax.set_title(\"Pre-Fire True Color Composite: Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -519,7 +496,9 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(pre_true_color))\n",
     "ax.set_title(\"Pre-Fire True Color Composite: Equalized & Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -530,8 +509,8 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "pre_rgb = np.stack(\n",
-    "    [pre_result[\"B04\"].values, pre_result[\"B03\"].values, pre_result[\"B02\"].values], axis=-1\n",
+    "pre_rgb = np.dstack(\n",
+    "    [pre_result[\"B04\"].values, pre_result[\"B03\"].values, pre_result[\"B02\"].values]\n",
     ")\n",
     "\n",
     "# Normalize to 0-1 range\n",
@@ -542,7 +521,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(pre_rgb_normalized)\n",
     "ax.set_title(\"Pre-Fire True Color Composite\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -556,7 +538,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(pre_rgb_normalized))\n",
     "ax.set_title(\"Pre-Fire True Color Composite: Equalized\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -567,15 +552,18 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "pre_false_color = np.stack(\n",
-    "    [pre_swir_norm, pre_nir_norm, pre_blue_norm], axis=-1\n",
+    "pre_false_color = np.dstack(\n",
+    "    [pre_swir_norm, pre_nir_norm, pre_blue_norm]\n",
     ")\n",
     "\n",
     "# Plot\n",
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(pre_false_color)\n",
     "ax.set_title(\"Pre-Fire False Color Composite: Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -589,7 +577,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(pre_false_color))\n",
     "ax.set_title(\"Pre-Fire False Color Composite: Equalized & Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -600,8 +591,8 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "pre_snb = np.stack(\n",
-    "    [pre_result[\"B12\"].values, pre_result[\"B8A\"].values, pre_result[\"B02\"].values], axis=-1\n",
+    "pre_snb = np.dstack(\n",
+    "    [pre_result[\"B12\"].values, pre_result[\"B8A\"].values, pre_result[\"B02\"].values]\n",
     ")\n",
     "\n",
     "# Normalize to 0-1 range\n",
@@ -612,7 +603,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(pre_snb_normalized)\n",
     "ax.set_title(\"Pre-Fire False Color Composite\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -626,7 +620,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(pre_snb_normalized))\n",
     "ax.set_title(\"Pre-Fire False Color Composite: Equalized\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -651,11 +648,12 @@
    "outputs": [],
    "source": [
     "# Create cloud mask from scl.\n",
+    "# Create cloud mask from scl.\n",
     "# Mask is True where pixels are CLEAR.\n",
-    "post_scl_mask = (post_data[\"SCL\"].astype(np.uint8) & 0b11000) == 0\n",
+    "scl = post_data[\"SCL\"].squeeze()\n",
+    "scl_mask = scl.isin([2, 4, 5, 6, 7, 11])\n",
     "\n",
-    "# Apply mask to spectral bands (SCL become NaN).\n",
-    "post_data_masked = post_data[[\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\"]].where(post_scl_mask)\n",
+    "post_data_masked = post_data[[\"B12\", \"B8A\", \"B04\", \"B03\", \"B02\"]].where(scl_mask)\n",
     "\n",
     "# Median now ignores NaN (SCL) pixels.\n",
     "post_median = post_data_masked.median(dim = \"time\")\n",
@@ -669,16 +667,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(5, 1, figsize=(6, 8))\n",
+    "fig, axes = plt.subplots(5, 1, figsize=(8, 12))\n",
     "\n",
     "for ax, band, name in zip(axes.flat, bands, band_names):\n",
     "    data = normalisation_str_gm(post_result[band].values, *contrast_stretch_percentile, gamma)\n",
     "\n",
-    "    # Normalize each band.\n",
-    "    p2, p98 = np.nanpercentile(data, (2, 98))\n",
-    "    normalized = np.clip((data - p2) / (p98 - p2), 0, 1)\n",
-    "\n",
-    "    ax.imshow(normalized, cmap=\"gray\")\n",
+    "    ax.imshow(data, cmap=\"gray\")\n",
     "    ax.set_title(name)\n",
     "    ax.axis(\"off\")\n",
     "\n",
@@ -708,15 +702,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_true_color = np.stack(\n",
-    "    [post_red_norm, post_green_norm, post_blue_norm], axis=-1\n",
+    "post_true_color = np.dstack(\n",
+    "    [post_red_norm, post_green_norm, post_blue_norm]\n",
     ")\n",
     "\n",
     "# Plot\n",
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(post_true_color)\n",
     "ax.set_title(\"Post-Fire True Color Composite: Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -730,7 +727,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(post_true_color))\n",
     "ax.set_title(\"Post-Fire True Color Composite: Equalized & Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -741,8 +741,8 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "post_rgb = np.stack(\n",
-    "    [post_result[\"B04\"].values, post_result[\"B03\"].values, post_result[\"B02\"].values], axis=-1\n",
+    "post_rgb = np.dstack(\n",
+    "    [post_result[\"B04\"].values, post_result[\"B03\"].values, post_result[\"B02\"].values]\n",
     ")\n",
     "\n",
     "# Normalize to 0-1 range\n",
@@ -753,7 +753,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(post_rgb_normalized)\n",
     "ax.set_title(\"Post-Fire True Color Composite\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -767,7 +770,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(post_rgb_normalized))\n",
     "ax.set_title(\"Post-Fire True Color Composite: Equalized\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -778,15 +784,18 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "post_false_color = np.stack(\n",
-    "    [post_swir_norm, post_nir_norm, post_blue_norm], axis=-1\n",
+    "post_false_color = np.dstack(\n",
+    "    [post_swir_norm, post_nir_norm, post_blue_norm]\n",
     ")\n",
     "\n",
     "# Plot\n",
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(post_false_color)\n",
     "ax.set_title(\"Post-Fire False Color Composite: Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -800,7 +809,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(post_false_color))\n",
     "ax.set_title(\"Post-Fire False Color Composite: Equalized & Gamma Adjusted\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -811,8 +823,8 @@
    "outputs": [],
    "source": [
     "# Stack bands as RGB - access as dataset variables\n",
-    "post_snb = np.stack(\n",
-    "    [post_result[\"B12\"].values, post_result[\"B8A\"].values, post_result[\"B02\"].values], axis=-1\n",
+    "post_snb = np.dstack(\n",
+    "    [post_result[\"B12\"].values, post_result[\"B8A\"].values, post_result[\"B02\"].values]\n",
     ")\n",
     "\n",
     "# Normalize to 0-1 range\n",
@@ -823,7 +835,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(post_snb_normalized)\n",
     "ax.set_title(\"Post-Fire False Color Composite\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -837,7 +852,10 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "ax.imshow(exposure.equalize_adapthist(post_snb_normalized))\n",
     "ax.set_title(\"Post-Fire False Color Composite: Equalized\")\n",
-    "ax.axis(\"off\")"
+    "ax.axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1055,12 +1073,11 @@
     "    4. Return NBR as numpy array along with the scene date\n",
     "    \"\"\"\n",
     "    # Load single item (note: pass [item] as a list)\n",
-    "    data = stac_load(\n",
+    "    data = odc.stac.load(\n",
     "        [item],\n",
     "        bands=[\"B8A\", \"B12\", \"SCL\"],\n",
-    "        crs=\"EPSG:3857\",\n",
-    "        resolution=10,\n",
     "        bbox=bbox,\n",
+    "        chunks={\"time\": 1}\n",
     "    )\n",
     "    \n",
     "    # Extract date from item\n",
@@ -1069,14 +1086,17 @@
     "    # Apply cloud mask (adapt your existing SCL mask logic)\n",
     "    # Create cloud mask from scl.\n",
     "    # Mask is True where pixels are CLEAR.\n",
-    "    scl_mask = (data[\"SCL\"].astype(np.uint8) & 0b11000) == 0\n",
+    "    scl = data[\"SCL\"].squeeze()\n",
+    "    scl_mask = scl.isin([2, 4, 5, 6, 7, 11])\n",
     "\n",
     "    # Apply mask to spectral bands (SCL become NaN).\n",
     "    data_masked = data[[\"B12\", \"B8A\"]].where(scl_mask)\n",
     "\n",
-    "    # Median now ignores NaN (SCL) pixels.\n",
-    "    median = data_masked.median(dim = \"time\")\n",
-    "    result = median.compute()\n",
+    "    # weekly composites\n",
+    "    result = data_masked.resample(time=\"1W\").mean().compute()\n",
+    "\n",
+    "    # Compute mean NBR per weekly period within AOI\n",
+    "    nbr_mean_biweekly = result.mean(dim=[\"x\", \"y\"])\n",
     "    \n",
     "    # Calculate NBR\n",
     "    nbr = np.where((result[\"B8A\"] + result[\"B12\"]) != 0, (result[\"B8A\"] - result[\"B12\"]) / (result[\"B8A\"] + result[\"B12\"]), 0)\n",
@@ -1091,7 +1111,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pseudocode:\n",
     "nbr_results = []\n",
     "\n",
     "for item in items:\n",
@@ -1110,28 +1129,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pseudocode:\n",
-    "# 1. Determine grid size based on number of scenes\n",
-    "# 2. Create subplots with matplotlib\n",
-    "# 3. Plot each NBR map in sequence\n",
+    "# Plot NBR time series in a grid layout.\n",
     "\n",
     "n_scenes = len(nbr_results)\n",
-    "n_cols = 4  # Adjust as needed\n",
-    "n_rows = (n_scenes + n_cols - 1) // n_cols  # Ceiling division\n",
+    "n_cols = 4\n",
+    "n_rows = (n_scenes + n_cols - 1) // n_cols\n",
     "\n",
-    "fig, axes = plt.subplots(n_rows, n_cols, figsize=(16, 4*n_rows))\n",
+    "fig, axes = plt.subplots(n_rows, n_cols, figsize = (16, 4 * n_rows))\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i, result in enumerate(nbr_results):\n",
-    "    axes[i].imshow(result[\"nbr\"], cmap=\"RdYlGn\", vmin=-1, vmax=1)\n",
+    "    # Remove the leading band dimension (1, H, W) -> (H, W).\n",
+    "    nbr_2d = result[\"nbr\"].squeeze()\n",
+    "    axes[i].imshow(nbr_2d, cmap = \"RdYlGn\", vmin = -1, vmax = 1)\n",
     "    axes[i].set_title(result[\"date\"])\n",
     "    axes[i].axis(\"off\")\n",
     "\n",
-    "# Hide unused axes\n",
-    "for j in range(i+1, len(axes)):\n",
+    "# Hide any unused subplot axes.\n",
+    "for j in range(i + 1, len(axes)):\n",
     "    axes[j].axis(\"off\")\n",
     "\n",
     "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "398537d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = list(\n",
+    "    catalog.search(\n",
+    "        bbox=bbox,\n",
+    "        datetime=\"2025-05-01/2025-07-30\",\n",
+    "        collections=\"sentinel-2-l2a\",\n",
+    "        query={\"eo:cloud_cover\": {\"lt\": 30}},\n",
+    "    ).item_collection()\n",
+    ")\n",
+    "\n",
+    "print(f\"Found {len(items)} items\")\n",
+    "\n",
+    "# Load all scenes\n",
+    "data_ts = odc.stac.load(\n",
+    "    items,\n",
+    "    bands=[\"B8A\", \"B12\", \"SCL\"],\n",
+    "    bbox=bbox,\n",
+    "    chunks={\"time\": 1},\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Calculate NBR for each timestep\n",
+    "def calc_nbr(nir, swir):\n",
+    "    nir = nir.astype(float)\n",
+    "    swir = swir.astype(float)\n",
+    "    return (nir - swir) / (nir + swir + 1e-10)\n",
+    "\n",
+    "\n",
+    "nbr_ts = calc_nbr(data_ts[\"B8A\"], data_ts[\"B12\"])\n",
+    "\n",
+    "# Mask clouds\n",
+    "scl = data_ts[\"SCL\"]\n",
+    "valid = scl.isin([2, 4, 5, 6, 7, 11])\n",
+    "nbr_ts = nbr_ts.where(valid)\n",
+    "\n",
+    "# weekly composites\n",
+    "nbr_biweekly = nbr_ts.resample(time=\"1W\").mean().compute()\n",
+    "\n",
+    "# Compute mean NBR per weekly period within AOI\n",
+    "nbr_mean_biweekly = nbr_biweekly.mean(dim=[\"x\", \"y\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af467583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maps with tighter range\n",
+    "g = nbr_biweekly.plot.imshow(\n",
+    "    col=\"time\",\n",
+    "    col_wrap=4,\n",
+    "    vmin=-0.3,\n",
+    "    vmax=0.6,\n",
+    "    cmap=\"RdYlGn\",\n",
+    "    figsize=(14, 8),\n",
+    "    cbar_kwargs={\"orientation\": \"horizontal\", \"pad\": 0.05, \"aspect\": 40}\n",
+    ")\n",
+    "\n",
+    "for ax in g.axs.flat:\n",
+    "    ax.axis(\"off\")\n",
+    "\n",
+    "plt.suptitle(\"Weekly NBR Composites\", y=1.02)\n",
     "plt.show()"
    ]
   }
